# networking-slankdev

./: README.md  setup.cfg
devstack/: README.md  slankdev_agent
networking_slankdev/cmd/eventlet/: slankdev_agent.py
networking_slankdev/ml2/: mech_slankdev.py  type_slankdev.py
networking_slankdev/ml2/agent/: slankdev_agent.py
