[metadata]
name = networking-slankdev
version = 0.0.1
description = OpenStack Neutron ML2 "slankdev" drivers
summary = OpenStack Neutron ML2 "slankdev" drivers
author = slankdev
author_email = slank.dev@gmail.com
url = https://github.com/slankdev/networking-slankdev
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[entry_points]
console_scripts =
	neutron-slankdev-agent = networking_slankdev.cmd.eventlet.slankdev_agent:main
neutron.ml2.type_drivers =
	slankdev = networking_slankdev.ml2.type_slankdev:SlankdevTypeDriver
neutron.ml2.mechanism_drivers =
	slankdev = networking_slankdev.ml2.mech_slankdev:SlankdevMechanismDriver
